parser.output
Terminals unused in grammar

    BOOLEAN_LITERAL
    DOT
    EXPR
    COMMENT
    UNKNOWN_TOKEN
    TOKEN_EOF


State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: ε
    2     | Body Prog

    3 Body: Declaration SEMICOLON
    4     | Assignment SEMICOLON
    5     | Expression SEMICOLON
    6     | PrintStatement SEMICOLON
    7     | Statement
    8     | ReturnStatement

    9 Declaration: KW_VAR IDENTIFIER
   10            | KW_VAR IDENTIFIER ASSIGN Expression
   11            | KW_VAR IDENTIFIER ASSIGN FunctionDef

   12 ReturnStatement: KW_RETURN Expression

   13 PrintStatement: KW_PRINT Expression

   14 Assignment: IDENTIFIER ASSIGN Expression

   15 Expression: IDENTIFIER
   16           | LPAREN Expression RPAREN
   17           | Relation
   18           | Value
   19           | FunctionCall
   20           | Calc
   21           | ArrayAccess

   22 ArrayAccess: Expression LBRACK Expression RBRACK

   23 Relation: Expression LT Expression
   24         | Expression LTEQ Expression
   25         | Expression GT Expression
   26         | Expression GTEQ Expression
   27         | Expression EQ Expression
   28         | Expression TOKEN_AND Expression
   29         | Expression TOKEN_OR Expression
   30         | Expression TOKEN_XOR Expression
   31         | TOKEN_NOT Expression

   32 Calc: Expression PLUS Expression
   33     | Expression MINUS Expression
   34     | Expression MULT Expression
   35     | Expression DIV Expression

   36 Value: STRING
   37      | INTEGER_LITERAL
   38      | REAL_LITERAL
   39      | KW_TRUE
   40      | KW_FALSE
   41      | ArrayValue
   42      | DictValue

   43 ArrayValue: LBRACK ArrayValues RBRACK

   44 DictValue: LBRACE DictValues RBRACE

   45 DictValues: ε
   46           | Assignment COMMA DictValues

   47 ArrayValues: ε
   48            | Expression COMMA ArrayValues

   49 FunctionDef: KW_FUNCT LPAREN Params RPAREN KW_IS Body KW_END

   50 FunctionCall: IDENTIFIER LPAREN Args RPAREN

   51 Params: ε
   52       | IDENTIFIER COMMA Params

   53 Args: ε
   54     | Expression COMMA Args

   55 Statement: IfStatement
   56          | ForStatement
   57          | WhileStatement

   58 IfStatement: KW_IF LPAREN Expression RPAREN KW_THEN Body KW_END
   59            | KW_IF LPAREN Expression RPAREN KW_THEN Body KW_ELSE Body KW_END

   60 ForStatement: KW_FOR LPAREN IDENTIFIER KW_IN Expression RPAREN KW_LOOP Body KW_END

   61 WhileStatement: KW_WHILE LPAREN Expression RPAREN KW_LOOP Body KW_END


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KW_IF (258) 58 59
    KW_IS (259) 49
    KW_VAR (260) 9 10 11
    KW_END (261) 49 58 59 60 61
    KW_TRUE (262) 39
    KW_FALSE (263) 40
    KW_THEN (264) 58 59
    KW_ELSE (265) 59
    KW_FOR (266) 60
    KW_LOOP (267) 60 61
    KW_IN (268) 60
    KW_WHILE (269) 61
    KW_FUNCT (270) 49
    KW_RETURN (271) 12
    KW_PRINT (272) 13
    IDENTIFIER (273) 9 10 11 14 15 50 52 60
    BOOLEAN_LITERAL (274)
    LPAREN (275) 16 49 50 58 59 60 61
    RPAREN (276) 16 49 50 58 59 60 61
    LBRACE (277) 44
    RBRACE (278) 44
    LBRACK (279) 22 43
    RBRACK (280) 22 43
    SEMICOLON (281) 3 4 5 6
    COMMA (282) 46 48 52 54
    DOT (283)
    EQ (284) 27
    ASSIGN (285) 10 11 14
    GT (286) 25
    LT (287) 23
    LTEQ (288) 24
    GTEQ (289) 26
    PLUS (290) 32
    MINUS (291) 33
    MULT (292) 34
    DIV (293) 35
    EXPR (294)
    TOKEN_OR (295) 29
    TOKEN_AND (296) 28
    TOKEN_XOR (297) 30
    TOKEN_NOT (298) 31
    INTEGER_LITERAL (299) 37
    REAL_LITERAL (300) 38
    COMMENT (301)
    STRING (302) 36
    UNKNOWN_TOKEN (303)
    TOKEN_EOF (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    Prog (51)
        on left: 1 2
        on right: 0 2
    Body (52)
        on left: 3 4 5 6 7 8
        on right: 2 49 58 59 60 61
    Declaration (53)
        on left: 9 10 11
        on right: 3
    ReturnStatement (54)
        on left: 12
        on right: 8
    PrintStatement (55)
        on left: 13
        on right: 6
    Assignment (56)
        on left: 14
        on right: 4 46
    Expression (57)
        on left: 15 16 17 18 19 20 21
        on right: 5 10 12 13 14 16 22 23 24 25 26 27 28 29 30 31 32 33 34 35 48 54 58 59 60 61
    ArrayAccess (58)
        on left: 22
        on right: 21
    Relation (59)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 17
    Calc (60)
        on left: 32 33 34 35
        on right: 20
    Value (61)
        on left: 36 37 38 39 40 41 42
        on right: 18
    ArrayValue (62)
        on left: 43
        on right: 41
    DictValue (63)
        on left: 44
        on right: 42
    DictValues (64)
        on left: 45 46
        on right: 44 46
    ArrayValues (65)
        on left: 47 48
        on right: 43 48
    FunctionDef (66)
        on left: 49
        on right: 11
    FunctionCall (67)
        on left: 50
        on right: 19
    Params (68)
        on left: 51 52
        on right: 49 52
    Args (69)
        on left: 53 54
        on right: 50 54
    Statement (70)
        on left: 55 56 57
        on right: 7
    IfStatement (71)
        on left: 58 59
        on right: 55
    ForStatement (72)
        on left: 60
        on right: 56
    WhileStatement (73)
        on left: 61
        on right: 57


State 0

    0 $accept: • Prog $end
    1 Prog: ε •  [$end]
    2     | • Body Prog
    3 Body: • Declaration SEMICOLON
    4     | • Assignment SEMICOLON
    5     | • Expression SEMICOLON
    6     | • PrintStatement SEMICOLON
    7     | • Statement
    8     | • ReturnStatement
    9 Declaration: • KW_VAR IDENTIFIER
   10            | • KW_VAR IDENTIFIER ASSIGN Expression
   11            | • KW_VAR IDENTIFIER ASSIGN FunctionDef
   12 ReturnStatement: • KW_RETURN Expression
   13 PrintStatement: • KW_PRINT Expression
   14 Assignment: • IDENTIFIER ASSIGN Expression
   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN
   55 Statement: • IfStatement
   56          | • ForStatement
   57          | • WhileStatement
   58 IfStatement: • KW_IF LPAREN Expression RPAREN KW_THEN Body KW_END
   59            | • KW_IF LPAREN Expression RPAREN KW_THEN Body KW_ELSE Body KW_END
   60 ForStatement: • KW_FOR LPAREN IDENTIFIER KW_IN Expression RPAREN KW_LOOP Body KW_END
   61 WhileStatement: • KW_WHILE LPAREN Expression RPAREN KW_LOOP Body KW_END

    KW_IF            shift, and go to state 1
    KW_VAR           shift, and go to state 2
    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    KW_FOR           shift, and go to state 5
    KW_WHILE         shift, and go to state 6
    KW_RETURN        shift, and go to state 7
    KW_PRINT         shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    $default  reduce using rule 1 (Prog)

    Prog             go to state 17
    Body             go to state 18
    Declaration      go to state 19
    ReturnStatement  go to state 20
    PrintStatement   go to state 21
    Assignment       go to state 22
    Expression       go to state 23
    ArrayAccess      go to state 24
    Relation         go to state 25
    Calc             go to state 26
    Value            go to state 27
    ArrayValue       go to state 28
    DictValue        go to state 29
    FunctionCall     go to state 30
    Statement        go to state 31
    IfStatement      go to state 32
    ForStatement     go to state 33
    WhileStatement   go to state 34


State 1

   58 IfStatement: KW_IF • LPAREN Expression RPAREN KW_THEN Body KW_END
   59            | KW_IF • LPAREN Expression RPAREN KW_THEN Body KW_ELSE Body KW_END

    LPAREN  shift, and go to state 35


State 2

    9 Declaration: KW_VAR • IDENTIFIER
   10            | KW_VAR • IDENTIFIER ASSIGN Expression
   11            | KW_VAR • IDENTIFIER ASSIGN FunctionDef

    IDENTIFIER  shift, and go to state 36


State 3

   39 Value: KW_TRUE •

    $default  reduce using rule 39 (Value)


State 4

   40 Value: KW_FALSE •

    $default  reduce using rule 40 (Value)


State 5

   60 ForStatement: KW_FOR • LPAREN IDENTIFIER KW_IN Expression RPAREN KW_LOOP Body KW_END

    LPAREN  shift, and go to state 37


State 6

   61 WhileStatement: KW_WHILE • LPAREN Expression RPAREN KW_LOOP Body KW_END

    LPAREN  shift, and go to state 38


State 7

   12 ReturnStatement: KW_RETURN • Expression
   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN

    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    IDENTIFIER       shift, and go to state 39
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    Expression    go to state 40
    ArrayAccess   go to state 24
    Relation      go to state 25
    Calc          go to state 26
    Value         go to state 27
    ArrayValue    go to state 28
    DictValue     go to state 29
    FunctionCall  go to state 30


State 8

   13 PrintStatement: KW_PRINT • Expression
   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN

    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    IDENTIFIER       shift, and go to state 39
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    Expression    go to state 41
    ArrayAccess   go to state 24
    Relation      go to state 25
    Calc          go to state 26
    Value         go to state 27
    ArrayValue    go to state 28
    DictValue     go to state 29
    FunctionCall  go to state 30


State 9

   14 Assignment: IDENTIFIER • ASSIGN Expression
   15 Expression: IDENTIFIER •  [LBRACK, SEMICOLON, EQ, GT, LT, LTEQ, GTEQ, PLUS, MINUS, MULT, DIV, TOKEN_OR, TOKEN_AND, TOKEN_XOR]
   50 FunctionCall: IDENTIFIER • LPAREN Args RPAREN

    LPAREN  shift, and go to state 42
    ASSIGN  shift, and go to state 43

    $default  reduce using rule 15 (Expression)


State 10

   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   16           | LPAREN • Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN

    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    IDENTIFIER       shift, and go to state 39
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    Expression    go to state 44
    ArrayAccess   go to state 24
    Relation      go to state 25
    Calc          go to state 26
    Value         go to state 27
    ArrayValue    go to state 28
    DictValue     go to state 29
    FunctionCall  go to state 30


State 11

   14 Assignment: • IDENTIFIER ASSIGN Expression
   44 DictValue: LBRACE • DictValues RBRACE
   45 DictValues: ε •  [RBRACE]
   46           | • Assignment COMMA DictValues

    IDENTIFIER  shift, and go to state 45

    $default  reduce using rule 45 (DictValues)

    Assignment  go to state 46
    DictValues  go to state 47


State 12

   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   43           | LBRACK • ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   47 ArrayValues: ε •  [RBRACK]
   48            | • Expression COMMA ArrayValues
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN

    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    IDENTIFIER       shift, and go to state 39
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    $default  reduce using rule 47 (ArrayValues)

    Expression    go to state 48
    ArrayAccess   go to state 24
    Relation      go to state 25
    Calc          go to state 26
    Value         go to state 27
    ArrayValue    go to state 28
    DictValue     go to state 29
    ArrayValues   go to state 49
    FunctionCall  go to state 30


State 13

   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   31         | TOKEN_NOT • Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN

    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    IDENTIFIER       shift, and go to state 39
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    Expression    go to state 50
    ArrayAccess   go to state 24
    Relation      go to state 25
    Calc          go to state 26
    Value         go to state 27
    ArrayValue    go to state 28
    DictValue     go to state 29
    FunctionCall  go to state 30


State 14

   37 Value: INTEGER_LITERAL •

    $default  reduce using rule 37 (Value)


State 15

   38 Value: REAL_LITERAL •

    $default  reduce using rule 38 (Value)


State 16

   36 Value: STRING •

    $default  reduce using rule 36 (Value)


State 17

    0 $accept: Prog • $end

    $end  shift, and go to state 51


State 18

    1 Prog: ε •  [$end]
    2     | • Body Prog
    2     | Body • Prog
    3 Body: • Declaration SEMICOLON
    4     | • Assignment SEMICOLON
    5     | • Expression SEMICOLON
    6     | • PrintStatement SEMICOLON
    7     | • Statement
    8     | • ReturnStatement
    9 Declaration: • KW_VAR IDENTIFIER
   10            | • KW_VAR IDENTIFIER ASSIGN Expression
   11            | • KW_VAR IDENTIFIER ASSIGN FunctionDef
   12 ReturnStatement: • KW_RETURN Expression
   13 PrintStatement: • KW_PRINT Expression
   14 Assignment: • IDENTIFIER ASSIGN Expression
   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN
   55 Statement: • IfStatement
   56          | • ForStatement
   57          | • WhileStatement
   58 IfStatement: • KW_IF LPAREN Expression RPAREN KW_THEN Body KW_END
   59            | • KW_IF LPAREN Expression RPAREN KW_THEN Body KW_ELSE Body KW_END
   60 ForStatement: • KW_FOR LPAREN IDENTIFIER KW_IN Expression RPAREN KW_LOOP Body KW_END
   61 WhileStatement: • KW_WHILE LPAREN Expression RPAREN KW_LOOP Body KW_END

    KW_IF            shift, and go to state 1
    KW_VAR           shift, and go to state 2
    KW_TRUE          shift, and go to state 3
    KW_FALSE         shift, and go to state 4
    KW_FOR           shift, and go to state 5
    KW_WHILE         shift, and go to state 6
    KW_RETURN        shift, and go to state 7
    KW_PRINT         shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    LPAREN           shift, and go to state 10
    LBRACE           shift, and go to state 11
    LBRACK           shift, and go to state 12
    TOKEN_NOT        shift, and go to state 13
    INTEGER_LITERAL  shift, and go to state 14
    REAL_LITERAL     shift, and go to state 15
    STRING           shift, and go to state 16

    $default  reduce using rule 1 (Prog)

    Prog             go to state 52
    Body             go to state 18
    Declaration      go to state 19
    ReturnStatement  go to state 20
    PrintStatement   go to state 21
    Assignment       go to state 22
    Expression       go to state 23
    ArrayAccess      go to state 24
    Relation         go to state 25
    Calc             go to state 26
    Value            go to state 27
    ArrayValue       go to state 28
    DictValue        go to state 29
    FunctionCall     go to state 30
    Statement        go to state 31
    IfStatement      go to state 32
    ForStatement     go to state 33
    WhileStatement   go to state 34


State 19

    3 Body: Declaration • SEMICOLON

    SEMICOLON  shift, and go to state 53


State 20

    8 Body: ReturnStatement •

    $default  reduce using rule 8 (Body)


State 21

    6 Body: PrintStatement • SEMICOLON

    SEMICOLON  shift, and go to state 54


State 22

    4 Body: Assignment • SEMICOLON

    SEMICOLON  shift, and go to state 55


State 23

    5 Body: Expression • SEMICOLON
   22 ArrayAccess: Expression • LBRACK Expression RBRACK
   23 Relation: Expression • LT Expression
   24         | Expression • LTEQ Expression
   25         | Expression • GT Expression
   26         | Expression • GTEQ Expression
   27         | Expression • EQ Expression
   28         | Expression • TOKEN_AND Expression
   29         | Expression • TOKEN_OR Expression
   30         | Expression • TOKEN_XOR Expression
   32 Calc: Expression • PLUS Expression
   33     | Expression • MINUS Expression
   34     | Expression • MULT Expression
   35     | Expression • DIV Expression

    LBRACK     shift, and go to state 56
    SEMICOLON  shift, and go to state 57
    EQ         shift, and go to state 58
    GT         shift, and go to state 59
    LT         shift, and go to state 60
    LTEQ       shift, and go to state 61
    GTEQ       shift, and go to state 62
    PLUS       shift, and go to state 63
    MINUS      shift, and go to state 64
    MULT       shift, and go to state 65
    DIV        shift, and go to state 66
    TOKEN_OR   shift, and go to state 67
    TOKEN_AND  shift, and go to state 68
    TOKEN_XOR  shift, and go to state 69


State 24

   21 Expression: ArrayAccess •

    $default  reduce using rule 21 (Expression)


State 25

   17 Expression: Relation •

    $default  reduce using rule 17 (Expression)


State 26

   20 Expression: Calc •

    $default  reduce using rule 20 (Expression)


State 27

   18 Expression: Value •

    $default  reduce using rule 18 (Expression)


State 28

   41 Value: ArrayValue •

    $default  reduce using rule 41 (Value)


State 29

   42 Value: DictValue •

    $default  reduce using rule 42 (Value)


State 30

   19 Expression: FunctionCall •

    $default  reduce using rule 19 (Expression)


State 31

    7 Body: Statement •

    $default  reduce using rule 7 (Body)


State 32

   55 Statement: IfStatement •

    $default  reduce using rule 55 (Statement)


State 33

   56 Statement: ForStatement •

    $default  reduce using rule 56 (Statement)


State 34

   57 Statement: WhileStatement •

    $default  reduce using rule 57 (Statement)


State 35

   15 Expression: • IDENTIFIER
   16           | • LPAREN Expression RPAREN
   17           | • Relation
   18           | • Value
   19           | • FunctionCall
   20           | • Calc
   21           | • ArrayAccess
   22 ArrayAccess: • Expression LBRACK Expression RBRACK
   23 Relation: • Expression LT Expression
   24         | • Expression LTEQ Expression
   25         | • Expression GT Expression
   26         | • Expression GTEQ Expression
   27         | • Expression EQ Expression
   28         | • Expression TOKEN_AND Expression
   29         | • Expression TOKEN_OR Expression
   30         | • Expression TOKEN_XOR Expression
   31         | • TOKEN_NOT Expression
   32 Calc: • Expression PLUS Expression
   33     | • Expression MINUS Expression
   34     | • Expression MULT Expression
   35     | • Expression DIV Expression
   36 Value: • STRING
   37      | • INTEGER_LITERAL
   38      | • REAL_LITERAL
   39      | • KW_TRUE
   40      | • KW_FALSE
   41      | • ArrayValue
   42      | • DictValue
   43 ArrayValue: • LBRACK ArrayValues RBRACK
   44 DictValue: • LBRACE DictValues RBRACE
   50 FunctionCall: • IDENTIFIER LPAREN Args RPAREN
   58 IfStatement: KW_IF LPAREN • Expression RPAREN KW_THEN Body KW_END
   59            | KW_IF LPAREN • Expression RPAREN KW_THEN Body KW_ELSE Body KW_END
